feat: URL로 접속했을 경우에, 기본 페이지인 index.html을 보여주는 기능 추가 - QUERY_SEQUENCE String의 이스케이프 시퀀스로 인해 contains가 동작하지 않는 것을 해결하기 위해 QUERY_SEQUENCE.charAt(1)을 통해 '?' 만 파싱하여 동작하도록 구현

--- a/src/main/resources/static/step3test/index.html
+++ b/src/main/resources/static/step3test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="color.js"></script>
+    <script defer src="/step3test/color.js"></script>
     <title>Color Change Example</title>
 </head>
 <body>
@@ -13,13 +13,13 @@
 <button class = "btn">Change Color</button>
 <hr>
 <h2>JPEG</h2>
-<img src="myjpg.jpg" alt="My JPG Image">
+<img src="/step3test/myjpg.jpg" alt="My JPG Image">
 <hr>
 <h2>JPEG</h2>
-<img src="myjpeg.jpeg" alt="My JPEG Image">
+<img src="/step3test/myjpeg.jpeg" alt="My JPEG Image">
 <hr>
 <h2>PNG</h2>
-<img src="mypng.png" alt="My PNG Image">
+<img src="/step3test/mypng.png" alt="My PNG Image">
 <hr>
 
 
