--- a/src/main/resources/static/login/index.html
+++ b/src/main/resources/static/login/index.html
@@ -23,7 +23,7 @@
     </header>
     <div class="page">
         <h2 class="page-title">로그인</h2>
-        <form class="form" action="/login/loginUser" , method="post">
+        <form class="form" action="/login" , method="post">
             <div class="textfield textfield_size_s">
                 <p class="title_textfield">아이디</p>
                 <input
