--- a/src/main/resources/static/user/login_failed/index.html
+++ b/src/main/resources/static/user/login_failed/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="../reset.css" rel="stylesheet"/>
-    <link href="../global.css" rel="stylesheet"/>
+    <link href="../../reset.css" rel="stylesheet"/>
+    <link href="../../global.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
     <header class="header">
-        <a href="/"><img src="../img/signiture.svg"/></a>
+        <a href="/"><img src="../../img/signiture.svg"/></a>
         <ul class="header__menu">
             <li class="header__menu__item">
                 <a class="btn btn_contained btn_size_s" href="/login">로그인</a>
@@ -22,49 +22,34 @@
         </ul>
     </header>
     <div class="page">
-        <h2 class="page-title">회원가입</h2>
-        <form class="form" action="/registration" , method="post">
+        <h2 class="page-title">로그인</h2>
+        <h2 class="fail-title">로그인이 실패하였습니다. 다시 로그인해주세요</h2>
+
+        <form class="form" action="/login" , method="post">
             <div class="textfield textfield_size_s">
                 <p class="title_textfield">아이디</p>
                 <input
-                        class="input_textfield"
                         name="userId"
+                        class="input_textfield"
                         placeholder="아이디를 입력해주세요"
                 />
             </div>
             <div class="textfield textfield_size_s">
                 <p class="title_textfield">비밀번호</p>
                 <input
-                        class="input_textfield"
                         name="password"
+                        class="input_textfield"
                         type="password"
                         placeholder="비밀번호를 입력해주세요"
                 />
             </div>
-            <div class="textfield textfield_size_s">
-                <p class="title_textfield">닉네임</p>
-                <input
-                        class="input_textfield"
-                        name="name"
-                        placeholder="닉네임을 입력해주세요"
-                />
-            </div>
-            <div class="textfield textfield_size_s">
-                <p class="title_textfield">이메일</p>
-                <input
-                        class="input_textfield"
-                        name="email"
-                        type="email"
-                        placeholder="이메일을 입력해주세요"
-                />
-            </div>
             <button
-                    id="registration-btn"
+                    id="login-btn"
                     class="btn btn_contained btn_size_m"
                     style="margin-top: 24px"
                     type="submit"
             >
-                회원가입
+                로그인
             </button>
         </form>
     </div>
