--- a/src/main/resources/static/article/index.html
+++ b/src/main/resources/static/article/index.html
@@ -23,14 +23,19 @@
     </header>
     <div class="page">
         <h2 class="page-title">게시글 작성</h2>
-        <form class="form" action="/article" method="post">
+        <form class="form" action="/article" method="post" enctype="multipart/form-data">
             <div class="textfield textfield_size_m">
                 <p class="title_textfield">내용</p>
                 <textarea
+                        name = "content"
                         class="input_textfield"
                         placeholder="글의 내용을 입력하세요"
                         autocomplete="username"
                 ></textarea>
+            </div>
+            <div class="file-upload">
+                <label for="file-upload" class="file-upload-label">이미지 첨부</label>
+                <input id="file-upload" type="file" name="image" accept="image/*">
             </div>
             <button
                     id="registration-btn"
