--- a/src/main/resources/static/user/list/index.html
+++ b/src/main/resources/static/user/list/index.html
@@ -12,7 +12,11 @@
         <a href="/"><img src="../../img/signiture.svg"/></a>
         <ul class="header__menu">
             <li class="header__menu__item">
-                <a class="btn btn_contained btn_size_s" href="/logout">로그아웃</a>
+                <form id="logout-form" action="/logout" method="post">
+                    <button type="submit" class="btn btn_contained btn_size_s"
+                    >로그아웃
+                    </button>
+                </form>
             </li>
             <li class="header__menu__item">
                 <a class="btn btn_ghost btn_size_s" href="/article">
