--- a/src/main/resources/static/article/index.html
+++ b/src/main/resources/static/article/index.html
@@ -15,9 +15,11 @@
                 <a class="btn btn_contained btn_size_s" href="/article">글쓰기</a>
             </li>
             <li class="header__menu__item">
-                <button id="logout-btn" class="btn btn_ghost btn_size_s" onclick="window.location.href='/logout'">
-                    로그아웃
-                </button>
+                <form id="logout-form" action="/logout" method="post">
+                    <button type="submit" class="btn btn_contained btn_size_s"
+                    >로그아웃
+                    </button>
+                </form>
             </li>
         </ul>
     </header>
@@ -27,7 +29,7 @@
             <div class="textfield textfield_size_m">
                 <p class="title_textfield">내용</p>
                 <textarea
-                        name = "content"
+                        name="content"
                         class="input_textfield"
                         placeholder="글의 내용을 입력하세요"
                         autocomplete="username"
